logs/validate.20260328-173807.log
error[E0425]: cannot find function `obeys_view_eq` in this scope
  --> src/Chap44/DocumentIndex.rs:76:17
   |
76 |                 obeys_view_eq::<Word>(),
   |                 ^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
22 +     use vstd::laws_eq::obeys_view_eq;
   |

error[E0425]: cannot find function `obeys_view_eq` in this scope
   --> src/Chap44/DocumentIndex.rs:289:17
    |
289 |                 obeys_view_eq::<Word>(),
    |                 ^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 22 +     use vstd::laws_eq::obeys_view_eq;
    |

error[E0425]: cannot find function `obeys_view_eq` in this scope
   --> src/Chap44/DocumentIndex.rs:338:17
    |
338 |                 obeys_view_eq::<Word>(),
    |                 ^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 22 +     use vstd::laws_eq::obeys_view_eq;
    |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 4s
Sampled Memory Usage: peak rust_verify RSS: 1169MB, peak z3 RSS: 0MB, min free: 20788MB
Sampled CPU Usage: rust_verify: 9s, z3 children: 0s
